# tensorflow-learning

./: 1-adding.ipynb  1-tensorflow.ipynb  2-fake.ipynb  2-gila-river-people-community-reservation-community-diabetes.ipynb  3-more-fake.ipynb  4-ethics.ipynb  4-real-pima-indians-diabetes.ipynb  5-better-model-evaluation-using-kfold.ipynb  5-wine.ipynb  README.md  pyproject.toml
1-part/: 3-tuning-the-model-with-gridsearch.ipynb  5-wine.ipynb  pyproject.toml
2-part/: 6-mpg-is-regressing.ipynb  7-earl-y-stop.ipynb  pyproject.toml
