[tool.poetry]
name = "tensorflow-adding"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.8.0"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
tensorflow-gpu = "^2.8.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
