[tool.poetry]
name = "tensorflow-part-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
tensorflow = "^2.8.0"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
plotly = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
